# LinuxCmd

hwinfocc/: CMakeLists.txt
hwinfocc/src/: MainWindow.cpp  MainWindow.h  main.cpp
hwinfocc/src/CmdHwinfo/: CmdHwinfo.cpp  CmdHwinfo.h  CmdHwinfoGpu.cpp  CmdHwinfoGpu.h  CmdHwinfoKeyboard.cpp  CmdHwinfoKeyboard.h  CmdHwinfoMonitor.cpp  CmdHwinfoMonitor.h  CmdHwinfoMouse.cpp  CmdHwinfoMouse.h  CmdHwinfoNetwork.cpp  CmdHwinfoNetwork.h  CmdHwinfoSound.cpp  CmdHwinfoSound.h  CmdHwinfoUsb.cpp  CmdHwinfoUsb.h
